<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.msu.brushric.theflockinggame.NewUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_user_header"
        android:id="@+id/newUserHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_below="@+id/newUserHeader"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_user" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText1"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText2"
        android:layout_below="@+id/passwordText1"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_password_again" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:id="@+id/buttonCreate"
        android:layout_below="@+id/passwordText2"
        android:layout_centerHorizontal="true"
        android:onClick="onCreateUser" />

</RelativeLayout>
