<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:focusableInTouchMode="false"
    android:id="@+id/layoutPort"
    style="@style/SkyTheme">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:id="@+id/frameWelcome">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/textWeclome"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_subhead_material"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:id="@+id/textP1"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_subhead_material"
        android:autoText="true"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerOneName"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:inputType="textPersonName"
        android:freezesText="true"
        android:hint="@string/name"
        android:textSize="@dimen/abc_text_size_subhead_material" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:id="@+id/frameSpacer"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageOstrich"
            android:contentDescription="@string/ostrich"
            android:src="@drawable/ostrich"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:id="@+id/textP2"
        android:textAlignment="center"
        android:layout_gravity="right"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_subhead_material"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerTwoName"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:freezesText="true"
        android:textSize="@dimen/abc_text_size_subhead_material"
        android:autoText="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left|top"
        android:layout_weight=".75">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/buttonStart"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_subhead_material"
            android:onClick="onStart"
            android:nestedScrollingEnabled="false" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left|top"
        android:layout_weight=".75">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to"
            android:id="@+id/buttonStart"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_subhead_material"
            android:onClick="onHelp"
            android:nestedScrollingEnabled="false" />

    </FrameLayout>

</LinearLayout>
